--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.1",
     "axios": "^1.13.1",
     "expo": "~54.0.20",
+    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
