--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-GEMINI_API_KEY=AIzaSyDftTINyC6Vj6JG_8eubCetB9G0FBtaAvM
+GEMINI_API_KEY=AIzaSyA1kKS53AcX87jwhlIROC4qZa8QjDmRf8A
+MONGO_URI=mongodb://localhost:27017/curtaincall
+SECRET_KEY=nlp-secret-key-2024
+
+# MQTT Configuration
+MQTT_BROKER_IP=127.0.0.1
+MQTT_BROKER_PORT=1883
