--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.1",
     "axios": "^1.13.1",
-    "expo": "~54.0.20",
+    "expo": "~54.0.25",
     "expo-av": "^16.0.7",
+    "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.13",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
     "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
